[gd_scene load_steps=8 format=2]

[ext_resource path="res://scenes/Enemy2.gd" type="Script" id=1]
[ext_resource path="res://icon.png" type="Texture" id=2]
[ext_resource path="res://scenes/HurtboxShape.tscn" type="PackedScene" id=3]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 2 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 22, 22.5 )

[sub_resource type="CircleShape2D" id=3]
radius = 818.242

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 15.125, 15.4375 )

[node name="Enemy2" type="KinematicBody2D"]
position = Vector2( 231, 332 )
script = ExtResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
modulate = Color( 0.764706, 0.0823529, 0.0823529, 1 )
scale = Vector2( 0.75, 0.75 )
frames = SubResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -0.5 )
shape = SubResource( 2 )

[node name="PlayerDetectionZone" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerDetectionZone"]
visible = false
shape = SubResource( 3 )

[node name="HurtboxShape" parent="." instance=ExtResource( 3 )]
collision_layer = 8

[node name="CollisionShape2D" parent="HurtboxShape" index="0"]
position = Vector2( -0.5, -3.25 )
shape = SubResource( 4 )

[connection signal="body_entered" from="PlayerDetectionZone" to="." method="_on_PlayerDetectionZone_body_entered"]
[connection signal="area_entered" from="HurtboxShape" to="." method="_on_HurtboxShape_area_entered"]

[editable path="HurtboxShape"]
